--- a/20220822_2/JS-todo/index.html
+++ b/20220822_2/JS-todo/index.html
@@ -84,6 +84,7 @@
   <!-- <script src="js/background.js"></script> -->
   <script src="js/todo.js"></script>
   <script src="js/clock-digital.js"></script>
+  <script src="js/darkmode.js"></script>
   <!-- <script src="js/ymd.js"></script> -->
   <!-- <script src="js/weather.js"></script> -->
 </html>
