--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <!-- 다크모드 버튼 -->
-    <button onclick="changeMode()" id="darkMode">Dark mode</button>
+    <button onclick="changeMode()" id="darkMode" class="original-mode">
+      Dark mode
+    </button>
     <center>
       <!-- 이름 입력 -->
 
